button, input and label overlap fixed

--- a/TeleHealth_files/responsive.css
+++ b/TeleHealth_files/responsive.css
@@ -153,7 +153,7 @@
         .btn.btn-primary#lbtnStep2 {
             background-color: #CACED2;
             color: #504F4F;
-            width: 294px;
+            width: 100%;
             height: 40px;
             font-family: Roboto;
             font-size: 18px;    
@@ -336,21 +336,20 @@
         border: 1px solid lightgray;
         border-radius: 5px;
         padding-left: 8px;
-        width: 294px; 
+        width: 80%; 
         height: 36px;
       }
       /* Controls position of the BOTTON */
-      .btnWrapper{
+      .btnWrapper div {
         position: absolute;
-        bottom:0%;
+        bottom:10%;
+        top: 70%;
         left: 0;
-        padding-left: 2%;
-        padding-right: 2%;
         padding-top: 5px;
         padding-bottom: 5px;
-        width: 100%;
-        display: flex;
-        justify-content: center;
+        width: 80%;
+        margin-left: 10%;
+        margin-right: 5%;
       }
 
       /* Functions for TeleHealthWaitingRoom.htm */
